<resources>

    <string name="app_name">APflux</string>

    //fragment name
    <string name="home">Home</string>
    <string name="timetable">Time Table</string>
    <string name="user">User</string>
    <string name="score">Score</string>
    <string name="news">News</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="place_prompt">Vui lòng chọn cơ sở</string>

    //dialog
    <string name="exit_app">Bạn muốn thoát App?</string>

    //Spinner array
    <string-array name="place_arrays">
        <item>Vui lòng chọn cơ sở</item>
        <item>FPT Polytechnic Hà Nội</item>
        <item>FPT Polytechnic Đà Nẵng</item>
        <item>FPT Polytechnic Hồ Chí Minh</item>
        <item>FPT Polytechnic Tây Nguyên</item>
        <item>FPT Polytechnic Cần Thơ</item>
    </string-array>

</resources>
